CSS/television.css
* {
    margin: 0;
    padding: 0;
    position: relative;
}
ul {
    list-style: none;
}
a {
    text-decoration: none;
}
.main {
    height: 60px;
    background-color: rgb(243, 243, 243);
}
nav {
    display: flex;
    justify-content: space-between;
    align-items: center;
    text-transform: uppercase;
    font-weight: 600;
    letter-spacing: 2px;
    position: fixed;
    top: 0;
    background-color: rgb(222, 243, 234);
    left: 0;
    width: 100%;
    height: 50px;
    box-sizing: border-box;
    padding: 10px 50px;
    box-shadow: 2px 2px 10px rgba(4, 95, 95, 0.897);
    z-index: 1;}
.menu {
    display: flex;}
.menu li a {
    padding: 10px 15px;
    font-size: 17px;
    color: rgb(184, 137, 17);}
.logo {
    font-size: 25px;
    font-weight: bold;
    color: indigo;
    margin-left: 20px;
    font-style: italic;}
.menu li a:hover {
    background-color: #def0ed;
    font-weight: 700;
    border-radius: 10px;
    border: solid 1px rgb(211, 224, 65);
    transition: all ease 0.4s;
}
.dropdown-checkbox {
    display: none;
}
.dropbtn {
    padding: 10px 15px;
    color: rgb(184, 137, 17);
    font-size: 17px;
    cursor: pointer;
    border-radius: 8px;
}
.dropbtn:hover {
    background-color: #def0ed;
    font-weight: 700;
    border-radius: 10px;
    border: solid 1px rgb(191, 202, 76);
    transition: all ease 0.4s;
}
.dropdown-content {
    display: none;
    position: fixed;
    background-color: #cceae5;
    box-shadow: 0px 8px 16px 3px rgba(74, 79, 79, 0.916);
    z-index: 1;
    border-radius: 10px;
    width: 220px;
}
.dropdown-checkbox:checked + .dropbtn .arrow {
    transform: rotate(180deg);
}
.dropdown-content a {
    color: rgb(0, 0, 0);
    padding: 10px 15px;
    display: list-item;
    border-radius: 5px;
}
.dropdown-content a:hover {
    background-color: #a6e4d1;
    box-shadow: 0px 1px 10px 1px rgba(74, 79, 79, 0.916);
}
.dropdown-checkbox:checked ~ .dropdown-content {
    display: block;
}
.dropdown {
    position: relative;
    display: inline-block;
}
.card{
    margin:50px 30px 30px 60px;
    height: 600px;
    width: 380px;
    background-color: aliceblue;
    border-radius: 10px;
    box-shadow: 1px 1px 20px 2px grey;
    display: inline-block;
}
.tv-price{
    margin-left: 15px;
    font-size: 20px;
}
.tv-img{
    padding: 10px;
    height: 180px;
    width: 330px;
    border-radius: 10px 10px 0 0;
    margin-left: 15px;
    margin-right: auto;
}
.tv-name{
    padding: 10px;
    text-align: justify;
    font-size: 17px;
}
.desc{
   padding: 10px;
}
.d-head{
    color: rgba(57, 55, 55, 0.63);
}
.highlight{
    padding: 10px;
}
.btn{
    background-color: black; 
    color: white; 
    border-radius: 20px; 
    border: none;
    padding: 10px; 
    margin-left: 140px;
}
.category-heading{
    padding: 10px;
    background-color: #c2e1db;
    text-align: center;
}
.footer{
    margin-top: 150px;
    width: auto;
    font-size: 17px;
    padding: 100px 15%;
    background-color: rgb(201, 223, 213);
    color: #30665b;
    display: flex;
 }
 .footer div{
    text-align: center;
    justify-content: space-around;
 }
 .second{
   flex-grow:.7;
 }
 .footer div h3{
    font-weight: 300;
    margin-bottom: 30px;
    font-size: 20px;
    letter-spacing: 1px;
 }
 .footer h3{
    color: rgb(252, 105, 0);
 }
 .footer h3:hover{
    border-bottom: .5px solid rgb(199, 11, 11);
 }
  .first a{
    display: block;
    text-decoration: none;
    color: rgb(135, 89, 29);
    margin-bottom: 10px;
    font-size: 19px;
 }
 form input{
    width: 400px;
    height: 45px;
    border-radius: 7px;
    text-align: center;
    margin-top: 20px;
    margin-bottom: 40px;
    outline: none;
    border: 1px solid rgb(236, 188, 67);
 }
 form button{
    background-color: #428579;
    border: 1px solid goldenrod;
    color:#264412;
    color: #ecf3f2;
    border-radius: 30px;
    padding: 10px 30px;
    font-size: 15px;
    cursor: pointer;
 }
 form button:hover{
    background-color:rgb(225, 149, 6) ;
 }
 .icon{
    display: flex;
    flex-direction: row;
    margin-top: 30px;
 }
 .icon img{
    height: 30px;
    width: 30px;
    cursor: pointer;
 }
 .icon img:hover:hover{
    box-shadow:0 0 7px 4px rgb(181, 131, 178);
 }
 .header {
    background-color: rgb(103, 172, 160);
    color: black;
    padding: 20px 0;
    text-align: center;
}
.intro {
    padding: 40px 20px;
    text-align: center;
    background-color: #fff;
}
.intro h1 {
    color: #333;
    margin-bottom: 20px;
}
.intro p {
    color: #666;
    font-size: 18px;
    margin-bottom: 40px;
}
.buy-btn{
    background-color: black; 
    color: white; 
    border-radius: 20px; 
    border: none;
    padding: 10px; 
    margin-left: 140px;
}
.buy-btn:hover {
    background-color: #e04e2e;
}
.container-card{
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-evenly;
}
/* small devices */
@media screen and (max-width: 600px) {
    nav {
        padding: 10px 20px;
        flex-direction: column;
        align-items: flex-start;
        height: auto;
    }
    .menu {
        flex-direction: column;
        width: 100%;
    }
    .menu li {
        margin: 5px 0;
    }
    .card {
        margin: 20px auto;
        width: 90%;
    }
    .btn, .buy-btn {
        margin-left: 0;
        display: block;
        margin: 10px auto;
        text-align: center;
    }
    form input {
        width: 90%;
    }
    .footer {
        flex-direction: column;
        align-items: center;
    }
    .footer div {
        width: 90%;
        margin-bottom: 20px;
    }
    .header{
        margin-top: 120px;
    }
    .card{
        height: 600px;
        width: 380px;
        background-color: aliceblue;
        border-radius: 10px;
        box-shadow: 1px 1px 20px 2px grey;
        display: flex;
        flex-direction: column;
        justify-content: end;
    }
}

